@@ -1,6 +1,6 @@
 rem ### -*- batch file -*- ######################################################
 rem #                                                                          ##
-rem #  JBoss Bootstrap Script Configuration                                    ##
+rem #  JBoss EAP Bootstrap Script Configuration                                ##
 rem #                                                                          ##
 rem #############################################################################
 
@@ -46,13 +46,10 @@ rem # options that are always passed by run.bat.
 rem #
 
 rem # JVM memory allocation pool parameters - modify as appropriate.
-set "JAVA_OPTS=-Xms1G -Xmx1G -XX:MaxPermSize=256M"
+set "JAVA_OPTS=-Xms1G -Xmx1G -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m"
 
 rem # Prefer IPv4
 set "JAVA_OPTS=%JAVA_OPTS% -Djava.net.preferIPv4Stack=true"
-
-rem # Set the jboss.modules.policy-permissions property to true by default.
-set "JAVA_OPTS=%JAVA_OPTS%  -Djboss.modules.policy-permissions=true "
 
 rem # Make Byteman classes visible in all module loaders
 rem # This is necessary to inject Byteman rules into AS7 deployments
